# src/main/java/com/volunteer/ordercreator/controller/OrderController.java
@@ -4,56 +4,45 @@ import com.volunteer.ordercreator.dto.OrderRequestDto;
 import com.volunteer.ordercreator.dto.OrderResponseDto;
 import com.volunteer.ordercreator.dto.OrderUpdateDto;
 import com.volunteer.ordercreator.service.OrderService;
-import jakarta.validation.Valid;
-import jakarta.validation.constraints.NotNull;
+import java.util.List;
 import lombok.RequiredArgsConstructor;
-import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
 import org.springframework.http.HttpStatus;
-import org.springframework.web.bind.annotation.DeleteMapping;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.PathVariable;
-import org.springframework.web.bind.annotation.PostMapping;
-import org.springframework.web.bind.annotation.PutMapping;
-import org.springframework.web.bind.annotation.RequestBody;
+import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.ResponseStatus;
 import org.springframework.web.bind.annotation.RestController;
 
 @RestController
 @RequiredArgsConstructor
 @RequestMapping("/orders")
-public class OrderController {
+public class OrderController implements OrdersApi {
 
     private final OrderService orderService;
 
-    @PostMapping
-    @ResponseStatus(HttpStatus.CREATED)
-    public OrderResponseDto createOrder(@Valid @RequestBody OrderRequestDto orderRequestDto) {
-        return orderService.createOrder(orderRequestDto);
+    @Override
+    public ResponseEntity<OrderResponseDto> createOrder(OrderRequestDto orderRequestDto) {
+        return ResponseEntity.status(HttpStatus.CREATED).body(orderService.createOrder(orderRequestDto));
     }
 
-    @GetMapping
-    @ResponseStatus(HttpStatus.OK)
-    public Page<OrderResponseDto> getAllOrders(@NotNull Pageable pageable){
-        return orderService.findAll(pageable);
+    @Override
+    public ResponseEntity<List<OrderResponseDto>> getAllOrders(Pageable pageable) {
+        return ResponseEntity.status(HttpStatus.OK).body(orderService.findAll(pageable).getContent());
     }
 
-    @GetMapping("/{uuid}")
-    @ResponseStatus(HttpStatus.OK)
-    public OrderResponseDto getOrderById(@PathVariable String uuid) {
-        return orderService.findById(uuid);
+    @Override
+    public ResponseEntity<OrderResponseDto> getOrderById(String uuid) {
+        return ResponseEntity.status(HttpStatus.OK).body(orderService.findById(uuid));
     }
 
-    @DeleteMapping("/{uuid}")
-    @ResponseStatus(HttpStatus.OK)
-    public OrderResponseDto deleteOrderById(@PathVariable String uuid) {
-        return orderService.deleteById(uuid);
+    @Override
+    public ResponseEntity<Void> deleteOrderById(String uuid) {
+        orderService.deleteById(uuid);
+        return ResponseEntity.noContent().build();
     }
 
-    @PutMapping("/{uuid}")
-    @ResponseStatus(HttpStatus.OK)
-    public OrderResponseDto updateOrder(@Valid @RequestBody OrderUpdateDto orderUpdateDto, @PathVariable String uuid) {
-        return orderService.updateById(uuid, orderUpdateDto);
+    @Override
+    public ResponseEntity<OrderResponseDto> updateOrder(String uuid,
+        OrderUpdateDto orderUpdateDto) {
+        return ResponseEntity.status(HttpStatus.OK).body(orderService.updateById(uuid, orderUpdateDto));
     }
 }
